--- a/curriculum.html
+++ b/curriculum.html
@@ -229,7 +229,7 @@
     
     <div class="container">
         <header class="header">
-            <img src="https://aitorroma.com/4df49e386becff7c8208d6579e791a1e548e3948.jpeg" alt="Foto de perfil" class="profile-img">
+            <img src="https://aitorroma.com/assets/images/profile.jpg" alt="Foto de perfil" class="profile-img">
             <div class="contact-info">
                 <div class="header-content">
                     <h1>Aitor Roma</h1>
