add: hiveagilectl.sh

--- a/index.html
+++ b/index.html
@@ -167,6 +167,15 @@ description: Página personal de Aitor Roma, Apasionado del Software Libre, Clou
           <p>Videopodcast sobre tecnología desde las trincheras, compartiendo experiencias y conocimientos técnicos sin filtros.</p>
           <span class="view-project">Ver proyecto →</span>
         </a>
+        
+        <a href="/projects/hiveagilectl" class="project-card">
+          <div class="project-icon">
+            <img src="https://hiveagilectl.sh/og-image.jpg" alt="HiveAgileCTL">
+          </div>
+          <h3>🐝 HiveAgileCTL</h3>
+          <p>CLI para instalar, gestionar y actualizar servicios del ecosistema HiveAgile.</p>
+          <span class="view-project">Ver proyecto →</span>
+        </a>
       </div>
     </div>
   </div>
