--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ description: Página personal de Aitor Roma, Apasionado del Software Libre, Clou
             <span>GitHub</span>
           </a>
           
-          <a href="https://mastodon.social/@aitorroma" class="social-link" target="_blank">
+          <a href="https://mastodon.hiveagile.com/@aitorroma" class="social-link" target="_blank">
             <img src="/assets/images/icons/mastodon.svg" alt="Mastodon">
             <span>Mastodon</span>
           </a>
